--- a/src/linked-table.html
+++ b/src/linked-table.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	<!-- 两个数组，一个存储真实数据，一个存储右侧数据在前个数组中的位置 -->
+	// 两个数组，一个存储真实数据，一个存储右侧数据在前个数组中的位置
  var data = [1,2,3,5,8,9,10,18,26,32],
      right = [1,2,3,4,5,6,7,8,9,-1],
      len = 9,
