--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>数据结构与算法</title>
   </head>
   <body>
-      <script type="text/javascript" src='./dist/main.js'></script>
+      <!-- <script type="text/javascript" src='./dist/main.js'></script> -->
   </body>
 </html>
