--- a/src/tree/BST.html
+++ b/src/tree/BST.html
@@ -6,45 +6,169 @@
   </head>
   <body>
     <script type="text/javascript">
-      ;(function(){
+      ;(function(window){
         function BinarySearchTree() {
           let Node = function(key) {
             this.key = key;
             this.left = null;
             this.right = null;
           }
-          let root = null;//根元素
+          let root = null,//根元素
+              insertNode = function(node, newNode) {//私有方法
+                if(newNode.key < node.key) {
+                  if(node.left === null) {
+                    node.left = newNode;
+                  } else {
+                    insertNode(node.left, newNode);
+                  }
+                } else {
+                  if(node.right === null) {
+                    node.right = newNode;
+                  } else {
+                    insertNode(node.right, newNode);
+                  }
+                }
+              },
+              inOrderTraverse = function(node, fn){
+                if(node === null) {
+                  return;
+                }
+                /*会从小到大顺序输出，是因为以根节点为开始，
+                  根据代码执行顺序，先递归左侧节点，再输出根
+                  节点，在递归右侧节点
+                */ 
+                inOrderTraverse(node.left,fn);
+                fn(node.key);
+                inOrderTraverse(node.right,fn);
+              },
+              preOrderTraverse = function(node, fn) {
+                if(node === null) {
+                  return;
+                }
+                fn(node.key);
+                preOrderTraverse(node.left, fn);
+                preOrderTraverse(node.right, fn);
+              },
+              postOrderTraverse = function(node, fn) {
+                if(node === null) {
+                  return;
+                }
+                postOrderTraverse(node.left,fn);
+                postOrderTraverse(node.right,fn);
+                fn(node.key);
+              },
+              minNode = function(node) {
+                if(node) {
+                  while(node && node.left !== null) {
+                    node = node.left;
+                  }
+                  return node.key;
+                }
+                return null;
+              },
+              maxNode = function(node) {
+                if(node) {
+                  while(node && node.right !== null) {
+                    node = node.right;
+                  }
+                  return node.key;
+                }
+                return null;
+              },
+              searchNode = function(node,key) {
+                if(node) {
+                  if(key < node.key) {
+                    return searchNode(node.left,key);
+                  } else if(key > node.key) {
+                    return searchNode(node.right,key);
+                  } else {
+                    return true;
+                  }
+                }
+                return false;
+              },
+              findMinNode = function(node) {
+                while(node && node.left !== null) {
+                  node = node.left;
+                }
+                return node;
+              },
+              removeNode = function(node, key) {
+                if(node) {
+                  if(key < node.key) {
+                    removeNode(node.left, key);
+                    return node;
+                  } else if(key > node.key) {
+                    removeNode(node.right, key);
+                    return node;
+                  } else {
+                    if( node.right === null && node.left === null) {
+                      let cur = node;
+                      node = null;
+                      return cur;
+                    }
+                    if(node.left === null) {
+                      node = node.right;
+                      return node;
+                    } else if(node.right === null) {
+                      node = node.left;
+                      return node;
+                    } else {
+                      let ex = findMinNode(node.right);
+                      node.key = ex.key;
+                      node.right = removeNode(node.right, ex.key);
+                      return node;
+                    }
+                  }
+                }
+              };
+          //插入
           this.insert = function(key) {//向树中插入一个新的键
             let node = new Node(key);
             if(root === null) {
               root = node;
             } else {
-              
+              insertNode(root, node);
             }
           }
-          this.search = function() {//在树中查找一个键，若节点存在，返回true
-
+          //遍历
+          this.inOrderTraverse = function(fn) {//通过中序遍历方式遍历所有节点
+            inOrderTraverse(root,fn);
           }
-          this.inOrderTraverse = function() {//通过中序遍历方式遍历所有节点
-
-          }
-          this.preOrderTraverse = function() {//通过先序遍历方式遍历所有节点
-
+          this.preOrderTraverse = function(fn) {//通过先序遍历方式遍历所有节点
+            preOrderTraverse(root,fn);
           }
           this.postOrderTraverse = function() {//通过后序遍历方式遍历所有节点
-
+            postOrderTraverse(root,fn);
+          }
+          this.search = function(key) {//在树中查找一个键，若节点存在，返回true
+           return searchNode(root,key);
           }
           this.min = function() {//返回树中最小的值或键
-
+            return minNode(root);
           }
           this.max = function() {//返回树中最大的值或键
-
+            return maxNode(root);
           }
           this.remove = function(key) {//从树中移除某个键
-            
+            return removeNode(root, key);
           }
         }
-      })();
+        window.BinarySearchTree = BinarySearchTree;
+      })(window);
+      let tree = new BinarySearchTree();
+      tree.insert(11);
+      tree.insert(7);
+      tree.insert(15);
+      tree.insert(5);
+      function showKey(key) {
+        console.log(key);
+      }
+      tree.inOrderTraverse(showKey);
+      tree.preOrderTraverse(showKey);
+      console.log(tree.min());
+      console.log(tree.max());
+      console.log(tree.search(7));
     </script>
   </body>
 </html>
