--- a/src/sort/quickSort.html
+++ b/src/sort/quickSort.html
@@ -7,11 +7,8 @@
 <body>
   <script type="text/javascript">
   ;(function(window) {
-    //  function getBaseNumber(arr) {
-    //    let base
-    //  }
      function quickSort(arr, left, right) {
-       let base = Math.floor((left + right) / 2),
+       let base = Math.floor((left + right) / 2),//选中间项为基准数
            temp = arr[base],
            i = left,
            j = right,
@@ -19,18 +16,12 @@
        if(left > right) {
          return;
        }
-       while(i !== j) {
+       while(i < j) {
         // 右向左找小于基准数
-	  	/*一定要先右到左，
-	  	  假如先从左向右找大于基准数的数，
-	  	  会出现找到的大于基准数的位数正好是基准数归位的位数，
-	  	  进行基准数归位，交互位置。
-	  	  此时，基准数左边会出现大于基准数的情况
-	  	*/
-         while(arr[j] > temp && i < j) {//跳过大于基准数的项
+         while(arr[j] > temp) {//跳过大于基准数的项
           j --;
          }
-         while(arr[i] < temp && i < j) {//跳过小于基准数的项
+         while(arr[i] < temp) {//跳过小于基准数的项
           i ++;
          }
          if (i < j) {
@@ -44,8 +35,8 @@
      }
 	 window.quickSort = quickSort;
 	})(window);
-    // var arr = [10,3,65,32,6,8];
-    var arr = [6,1,2,7,9,3,4,5,10,8];
+    // var arr = [10,3,65,6,8];
+    var arr = [6,1,2,7,11,89,34,67,54,66,1024,111,345,897,569,3,4,5,10,8];
     quickSort(arr, 0, arr.length - 1);
     console.log(arr);
   </script>
