--- a/src/sort/sort.html
+++ b/src/sort/sort.html
@@ -54,14 +54,14 @@
   	}
   	sort(1,arr.length);
   	/*去重*/
-  	for(var i = 0; i<arr.length;i++){
-  		if(arr[i] == arr[i+1]){
-  			arr.splice(i+1,1)
-  		}
-  	}
+  	// for(var i = 0; i<arr.length;i++){
+  	// 	if(arr[i] == arr[i+1]){
+  	// 		arr.splice(i+1,1)
+  	// 	}
+  	// }
     console.log(arr)
   }
-  // book([20,40,32,67,40,20,89,300,400,15])
+  book([20,40,32,67,40,20,89,300,400,15])
   </script>
 </body>
 </html>
