--- a/src/sort/quickSort.html
+++ b/src/sort/quickSort.html
@@ -8,7 +8,7 @@
   <script type="text/javascript">
   ;(function(window) {
      function quickSort(arr, left, right) {
-       let base = Math.floor((left + right) / 2),//选中间项为基准数
+       let base = left,//选中间项为基准数
            temp = arr[base],
            i = left,
            j = right,
@@ -16,12 +16,12 @@
        if(left > right) {
          return;
        }
-       while(i < j) {
+       while(i != j) {
         // 右向左找小于基准数
-         while(arr[j] > temp) {//跳过大于基准数的项
+         while(arr[j] >= temp && i < j) {//跳过大于基准数的项
           j --;
          }
-         while(arr[i] < temp) {//跳过小于基准数的项
+         while(arr[i] <= temp && i < j) {//跳过小于基准数的项
           i ++;
          }
          if (i < j) {
@@ -30,12 +30,15 @@
            arr[j] = t;
          }
        }
+       arr[base] = arr[i];
+       arr[i] = temp;
        quickSort(arr, left, i - 1);
        quickSort(arr, i + 1, right);
      }
 	 window.quickSort = quickSort;
 	})(window);
     // var arr = [10,3,65,6,8];
+    // var arr = [6,1,2,7,11,2];
     var arr = [6,1,2,7,11,89,34,67,54,66,1024,111,345,897,569,3,4,5,10,8];
     quickSort(arr, 0, arr.length - 1);
     console.log(arr);
