--- a/src/sort/quickSort.html
+++ b/src/sort/quickSort.html
@@ -8,8 +8,7 @@
   <script type="text/javascript">
   ;(function(window) {
      function quickSort(arr, left, right) {
-       let base = left,//选中间项为基准数
-           temp = arr[base],
+       let temp = arr[left],
            i = left,
            j = right,
            t = null;
