quick sort fixed

--- a/src/sort/quickSort.html
+++ b/src/sort/quickSort.html
@@ -12,7 +12,7 @@
            i = left,
            j = right,
            t = null;
-       if(left > right) {
+       if(left >= right) {
          return;
        }
        while(i != j) {
